# pachanin-demo

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .tmp-ir-10-3-ci-trigger  .tmp-ir-10-3-fix-trigger  .tmp-ir-10-3-next-runtime-trigger  .tmp-ir-10-3-runtime-fix-trigger  .tmp-ir103-diag.txt  .tmp-main-ir-10-3-lab-e2e-fix-trigger  .tmp-main-ir-10-3-schema-fix-trigger  .tmp-main-ir103-diag-trigger  AGENTS.md  AUDIT_design-cabinets_2026-07-16.md  AUDIT_design-visual_2026-07-19.md  AUDIT_full-industrial_2026-07-11.md  AUDIT_maturity-runtime_2026-07-03.md  AUDIT_platform-v7_full.md  CANONICAL_DEPLOY.md  CANONICAL_SCENARIO.md  DESIGN_PLAYBOOK_cabinets_2026-07-16.md  DESIGN_STANDARD_platform_2026-07-19.md  LOCAL_RUNBOOK.md  PHASE1_BACKLOG.md  PHASE2_EXECUTION.md  PRODUCTION_CUTOVER.md  README.md  TRIGGER_PRODUCTION_REDEPLOY.txt  app  branch-trigger-20260411.txt  deploy.sh  design-antipattern-baseline.json  design-governance-v8.json  docker-compose.yml  middleware.ts  netlify.toml  next.config.js  notes_ui_test.txt  package.json  pnpm-lock.yaml  (+20 more)
apps/tai/: README.md  ROADMAP.md  ap10_apply_patch.py  ap11_apply_patch.py  pyproject.toml  release-source-manifest.json
apps/tai/evidence/: ap-09-exact-main.json
apps/tai/knowledge-sources/: AP-14C-GOLD-SET.md  AP-14D-DIAGNOSTIC-CODES.v1.json  AP-14D-NEXT-LIVE-RUN.md  AP-14D-REMEDIATION-BASELINE.json  AP-14D-SOURCE-AUTHORITY.v1.json  AP-14D-SOURCE-DIAGNOSTICS.md  README.md  official-sources.v1.json
apps/tai/migrations/: 0001_loader_state.sql
apps/tai/model-artifacts/: README.md  benchmark-prerequisite-baseline.v1.json  (+83 more)
(+6188 files in other folders)
