[project]
name = "transparent-agro-intelligence"
version = "0.1.0"
description = "Industrial AI control plane for Transparent Price"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.10,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
  "mypy>=1.15,<2",
]

[tool.setuptools]
packages = ["tai"]

[tool.setuptools.package-data]
tai = ["trust/*.pem"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
